Simple integration of disqus comments.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title:              "The Plain"
 description:        "The Plain is a Minimalist Jekyll theme that focuses on writing matters."
 google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o # Put your Google Verification here
 google_analytics:   UA-XXXXXXX-X # Put your Google Analytics code
+discus_identifier:  hypercol # Add your Disqus identifier
 
 # Author Info
 author_name:        "Heiswayi Nrird"
